--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,18 +1,20 @@
 <mat-toolbar>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-      <mat-icon>menu</mat-icon>
-    </button>
-    <span>My App</span>
+  <button mat-icon-button [matMenuTriggerFor]="menu" class="example-icon" aria-label="Example icon-button with menu icon">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <mat-menu #menu="matMenu">
+    <button mat-menu-item><a routerLink="/galery">Galery</a></button>
+    <button mat-menu-item><a routerLink="/info">Info</a></button>
+    <button mat-menu-item (click)="onLogout()">Cerrar sesión</button>
+  </mat-menu>
+    <span><a routerLink="">My App</a></span>
     <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-      <mat-icon>favorite</mat-icon>
-    </button>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-      <mat-icon>share</mat-icon>
-    </button>
-    <div *ngIf="userEmail">
+
+    <div class="username" *ngIf="userEmail">
       <p>Bienvenido, {{ userEmail }}</p>
-      <button (click)="onLogout()">Cerrar sesión</button>
     </div>
 
 </mat-toolbar>
+<mat-toolbar-row>
+  <span>Custom Toolbar</span>
+</mat-toolbar-row>
